#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "collector",
    srcs = ["collector.rs"],
    deps = [
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_library(
    name = "span",
    srcs = ["span.rs"],
    deps = ["@crates//:tracing"],
)

rust_library(
    name = "channel",
    srcs = ["channel.rs"],
    deps = [
        "@crates//:miette",
        "@crates//:serde",
        "@crates//:thiserror",
    ],
)

rust_library(
    name = "filter",
    srcs = ["filter.rs"],
    deps = [
        ":channel",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_library(
    name = "stream",
    srcs = ["stream.rs"],
    deps = [
        ":channel",
        "@crates//:serde",
        "@crates//:tracing",
    ],
)

rust_library(
    name = "layer",
    srcs = ["layer.rs"],
    deps = [
        ":channel",
        ":stream",
        "@crates//:dashmap",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_library(
    name = "opaque",
    srcs = ["opaque.rs"],
    crate_name = "record",
)

rust_library(
    name = "transparent",
    srcs = ["transparent.rs"],
    crate_name = "record",
    deps = [
        ":collector",
        ":span",
        "@crates//:tracing",
    ],
)

alias(
    name = "module",
    actual = select({
        "//platform/observation:transparent": ":transparent",
        "//conditions:default": ":opaque",
    }),
)

rust_library(
    name = "configuration_trace",
    srcs = ["configuration.rs"],
    crate_name = "configuration",
    rustc_flags = ["--cfg=level_trace"],
    deps = ["@crates//:tracing"],
)

rust_library(
    name = "configuration_debug",
    srcs = ["configuration.rs"],
    crate_name = "configuration",
    rustc_flags = ["--cfg=level_debug"],
    deps = ["@crates//:tracing"],
)

rust_library(
    name = "configuration_info",
    srcs = ["configuration.rs"],
    crate_name = "configuration",
    rustc_flags = ["--cfg=level_info"],
    deps = ["@crates//:tracing"],
)

rust_library(
    name = "configuration_warn",
    srcs = ["configuration.rs"],
    crate_name = "configuration",
    rustc_flags = ["--cfg=level_warn"],
    deps = ["@crates//:tracing"],
)

rust_library(
    name = "configuration_error",
    srcs = ["configuration.rs"],
    crate_name = "configuration",
    rustc_flags = ["--cfg=level_error"],
    deps = ["@crates//:tracing"],
)

alias(
    name = "configuration",
    actual = select({
        "//platform/observation/level:trace": ":configuration_trace",
        "//platform/observation/level:debug": ":configuration_debug",
        "//platform/observation/level:warn": ":configuration_warn",
        "//platform/observation/level:error": ":configuration_error",
        "//conditions:default": ":configuration_info",
    }),
)

##### Documentation                                                                                                                             [ Documentation ]
