#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "rule",
    srcs = ["rule.rs"],
    deps = [
        "//component/translator/rule:filter",
        "//component/translator/rule:terminate",
    ],
)

rust_library(
    name = "source",
    srcs = ["source.rs"],
    deps = [
        "//system:resource",
        "@crates//:miette",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
