#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = [
    "//component:__pkg__",
    "//system/generation/web:__pkg__",
    "//system/generation/web:__subpackages__",
])

##### Module                                                                                                                                           [ Module ]
rust_library(
    name = "language",
    srcs = ["language.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:miette",
        "@crates//:thiserror",
    ],
)

rust_library(
    name = "element",
    srcs = ["element.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":language",
        ":span",
    ],
)

rust_library(
    name = "extraction",
    srcs = ["extraction.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":language",
        "@crates//:miette",
    ],
)

rust_library(
    name = "span",
    srcs = ["span.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "table",
    srcs = ["table.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":element",
        ":span",
    ],
)

rust_library(
    name = "value",
    srcs = ["value.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "selector",
    srcs = ["selector.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":class",
    ],
)

rust_library(
    name = "class",
    srcs = ["class.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "style",
    srcs = ["style.rs"],
    aliases = {
        "//component/web/property/font:style": "fontstyle",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":selector",
        ":value",
        "//component/web/property:appearance",
        "//component/web/property:cursor",
        "//component/web/property:display",
        "//component/web/property:overflow",
        "//component/web/property:position",
        "//component/web/property/border:collapse",
        "//component/web/property/flex:direction",
        "//component/web/property/flex:wrap",
        "//component/web/property/font:style",
        "//component/web/property/font:weight",
        "//component/web/property/sizing",
        "//component/web/property/text:align",
        "//component/web/property/text:decoration",
        "//component/web/property/text:transform",
        "//component/web/property/white:space",
    ],
)

rust_library(
    name = "list",
    srcs = ["list.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":element",
        ":span",
    ],
)

rust_library(
    name = "body",
    srcs = ["body.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":class",
        ":element",
        ":extraction",
        ":language",
        ":list",
        ":span",
        ":table",
        "@crates//:miette",
    ],
)

rust_library(
    name = "page",
    srcs = ["page.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":body",
        ":element",
        "@crates//:miette",
    ],
)

rust_library(
    name = "error",
    srcs = ["error.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//system/graph:similarity",
        "@crates//:miette",
        "@crates//:thiserror",
    ],
)

rust_library(
    name = "index",
    srcs = ["index.rs"],
    visibility = ["//visibility:public"],
)

##### Binary                                                                                                                                           [ Binary ]
rust_binary(
    name = "validate",
    srcs = ["validate.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//system:command",
        "//system:observation",
        "@crates//:clap",
        "@crates//:miette",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tracing",
    ],
)

##### Documentation                                                                                                                             [ Documentation ]
